# fresco-hpc-analyses

./: README.md
comad/: waste_analysis.py  waste_analysis_multi_thread.py
early-warning-failure-detection/: monitor_2014_processing.sh  monitor_2015_processing.sh  process_2014_dataset.sh  process_2015_dataset.sh  process_2015_dataset.sh.backup  process_complete_dataset.sh  pyproject.toml  run_equivalence_tests.py
early-warning-failure-detection/fresco_failure_detector/: Makefile  README.md  pyproject.toml  requirements.txt
early-warning-failure-detection/fresco_failure_detector/fresco_fd/: __init__.py  cli.py  config.py  config.py.backup  enhanced_modeling.py  feature_windows.py  features.py  io_discovery.py  io_reader.py  labeling.py  models.py  quick_baseline_modeling.py  sampler.py  utils.py
early-warning-failure-detection/fresco_failure_detector/scripts/: run_test.sh
early-warning-failure-detection/fresco_failure_detector/tests/: __init__.py  test_basic.py
early-warning-failure-detection/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_pandas_polars_equivalence.py  test_requirements.txt
